2008-10-22  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression)
	(php-beginning-of-defun-regexp): Fix regular expression that is
	failing to match identifiers in function definitions for Imenu and
	add-change-log commands.
	(php-keywords): Remove "private" since its handled like
	"protected" and "public", not as a generic keyword.
	(php-font-lock-keywords-1): The use of grouping in the regular
	expression for php-constants and php-keywords added on 2008-04-12
	requires referencing the group number to highlight, otherwrise the
	entire match is highlighted.

	* php-mode.texi: Fix typos and fill long paragraphs.  Add
	maintainer comment near top of file.  Correct maintainer email
	address with working address.
	(Introduction): Add index entry for M-x php-mode-version.
	(Installation): New section.
	(Editing): Change concept index entry of fill-column to a variable
	index entry.
	(Completion): Add index entry for M-x visit-tags-table, and M-x
	customize-variable.
	(Index Menu): Finish maintainer comments on Imenu.  "Functions"
	sub-menu is now named "All Functions".  Document new sub-menus
	"Public methods", "Private methods", "Protected methods".  Add
	index entry for M-x customize-variable.
	(Customization): Add index entry for M-x customize-group.
	(Embedded HTML): Add index entry for M-x html-mode and M-x
	html-mode.
	(Contributors): Add Dias Badekas.
	(Concept Index): Add maintainer notes on indexing.

2008-10-21  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression)
	(php-block-stmt-1-kwds, php-block-stmt-2-kwds)
	(php-block-stmt-1-key, php-block-stmt-2-key)
	(php-class-decl-kwds, php-class-key): Move some definitions to
	earlier in the file to avoid "free variable" warnings on byte
	compilation.
	(php-tags-key) Remove eval-when-compile for strange
	compilation error about void variable php-tags.

2008-10-20  Aaron S. Hawley  <ashawley-@-sourceforge.net>
